bk_ida/gccida/g1/ix86_secondary_memory_needed
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_secondary_memory_needed/src/i386.c:12785:36: error: must use 'enum' tag to refer to type 'reg_class'
int  ix86_secondary_memory_needed( reg_class class1, reg_class class2, machine_mode mode, int strict) 
                                   ^
                                   enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_secondary_memory_needed/src/i386.c:12785:54: error: must use 'enum' tag to refer to type 'reg_class'
int  ix86_secondary_memory_needed( reg_class class1, reg_class class2, machine_mode mode, int strict) 
                                                     ^
                                                     enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_secondary_memory_needed/src/i386.c:12785:72: error: must use 'enum' tag to refer to type 'machine_mode'
int  ix86_secondary_memory_needed( reg_class class1, reg_class class2, machine_mode mode, int strict) 
                                                                       ^
                                                                       enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_secondary_memory_needed/src/i386.c:12823:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 12336, "ix86_secondary_memory_needed"); 
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_secondary_memory_needed/src/obj/i386.o] Error 1
